test/classes/errors/nilability-assign/assign-nonnil-shared-from-oknil-shared.good
assign-nonnil-shared-from-oknil-shared.chpl:8: error: Cannot assign to shared MyClass from shared MyClass?
